--- a/source/less/global.less
+++ b/source/less/global.less
@@ -3,14 +3,13 @@ html {
 }
 
 body {
-  min-width: 320px;
   min-height: 100%;
   margin: 0;
   font-family: "PT Sans", "Arial", sans-serif;
-  font-size: 14px;
+  font-size: 20px;
   line-height: 21px;
-  background-color: #e7e5e5;
-  color: #000000;
+  background-color: #ffffff;
+  color: #48494d;
 }
 
 img {
@@ -20,18 +19,11 @@ img {
 }
 
 .page__container {
-  background-color: #ffffff;
-}
-
-@media (min-width: 1200px) {
-  .page__container {
-    display: flex;
-    flex-direction: column;
-    max-width: 1200px;
-    min-height: 100%;
-    margin: 0 auto;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  }
+  display: flex;
+  flex-direction: column;
+  max-width: 1170px;
+  min-height: 100%;
+  margin: 0 auto;
 }
 
 .visually-hidden {
