Добавляет секцию промо

--- a/source/less/blocks/nav.less
+++ b/source/less/blocks/nav.less
@@ -1,6 +1,6 @@
 .nav__wrapper {
   display: flex;
-  width: 100%;
+  width: 1170px;
   text-align: center;
 }
 
@@ -47,10 +47,10 @@
 }
 
 .nav-list__item:nth-child(4) {
-  padding: 25px 0 0 100px;
+  padding: 25px 0 0 73px;
   background-image: url("../../img/arrow.svg");
   background-repeat: no-repeat;
-  background-position: 65px 25px;
+  background-position: 40px 25px;
   text-align: start;
 }
 
@@ -82,7 +82,7 @@
   width: 27px;
   height: 24px;
   padding-right: 25px;
-  background-image: url("../../img/heart.svg");
+  background-image: url("../../img/like.png");
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -120,7 +120,7 @@
 
 .nav2__list {
   display: flex;
-  width: 100%;
+  width: 1170px;
   height: 53px;
   margin: 0;
   padding: 0;
@@ -153,7 +153,7 @@
   &::after {
     position: absolute;
     left: 50%;
-    top: 39px;
+    top: 37px;
     transform: translate(-50%, 0);
     width: 140%;
     height: 3px;
