--- a/source/less/fonts.less
+++ b/source/less/fonts.less
@@ -1,15 +1,15 @@
 @font-face {
-  font-family: "PT Sans";
+  font-family: "Barlow";
   font-weight: 400;
   font-style: normal;
-  src: url("../fonts/ptsans.woff2") format("woff2"), url("../fonts/ptsans.woff") format("woff");
+  src: url("../fonts/barlow.woff2") format("woff2"), url("../fonts/barlow.woff") format("woff");
   font-display: swap;
 }
 
 @font-face {
-  font-family: "PT Sans";
+  font-family: "Barlow";
   font-weight: 700;
   font-style: normal;
-  src: url("../fonts/ptsansbold.woff2") format("woff2"), url("../fonts/ptsansbold.woff") format("woff");
+  src: url("../fonts/barlow.woff2") format("woff2"), url("../fonts/barlowbold.woff") format("woff");
   font-display: swap;
 }
