--- a/source/less/global.less
+++ b/source/less/global.less
@@ -5,7 +5,7 @@ html {
 body {
   min-height: 100%;
   margin: 0;
-  font-family: "PT Sans", "Arial", sans-serif;
+  font-family: "Barlow", "Arial", sans-serif;
   font-size: 20px;
   line-height: 21px;
   background-color: #ffffff;
