--- a/source/less/fonts.less
+++ b/source/less/fonts.less
@@ -13,3 +13,19 @@
   src: url("../fonts/barlow.woff2") format("woff2"), url("../fonts/barlowbold.woff") format("woff");
   font-display: swap;
 }
+
+@font-face {
+  font-family: "Proxima Nova";
+  font-weight: 400;
+  font-style: normal;
+  src: url("../fonts/proximanova.woff2") format("woff2"), url("../fonts/proximanova.woff") format("woff");
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Proxima Nova";
+  font-weight: 700;
+  font-style: normal;
+  src: url("../fonts/proximanovabold.woff2") format("woff2"), url("../fonts/proximanovabold.woff") format("woff");
+  font-display: swap;
+}
