--- a/source/less/style.less
+++ b/source/less/style.less
@@ -5,3 +5,5 @@
 @import url("./blocks/header.less");
 @import url("./blocks/nav.less");
 @import url("./blocks/promo.less");
+@import url("./blocks/slider.less");
+@import url("./blocks/action.less");
