Изменяет логику слайдера

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -7,3 +7,4 @@
 @import url("./blocks/promo.less");
 @import url("./blocks/slider.less");
 @import url("./blocks/action.less");
+@import url("./blocks/search.less");
