Добавляет секцию поиска

--- a/source/less/blocks/nav.less
+++ b/source/less/blocks/nav.less
@@ -131,6 +131,11 @@
 
 .list-goods__item {
   cursor: pointer;
+}
+
+.goods__link {
+  text-decoration: none;
+  color: #48494d;
 
   &:hover {
     color: #ff7931;
