Добавляет секцию поиска

--- a/source/less/blocks/nav.less
+++ b/source/less/blocks/nav.less
@@ -151,6 +151,10 @@
   color: #000000;
   cursor: default;
 
+  &:hover {
+    color: #000000;
+  }
+
   &::after {
     position: absolute;
     left: 50%;
