Добавляет секцию категорий

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -8,3 +8,4 @@
 @import url("./blocks/slider.less");
 @import url("./blocks/action.less");
 @import url("./blocks/search.less");
+@import url("./blocks/categories.less");
