--- a/source/less/blocks/categories.less
+++ b/source/less/blocks/categories.less
@@ -31,11 +31,11 @@
 }
 
 .categories-card--chemistry::before {
-  background-image: url("../../img/icon1.png");
+  background-image: url("../../img/icon1.svg");
 }
 
 .categories-card--tyres::before {
-  background-image: url("../../img/icon2.png");
+  background-image: url("../../img/icon2.svg");
 }
 
 .categories-card--tools::before {
