--- a/source/less/style.less
+++ b/source/less/style.less
@@ -9,3 +9,5 @@
 @import url("./blocks/action.less");
 @import url("./blocks/search.less");
 @import url("./blocks/categories.less");
+@import url("./blocks/popular.less");
+@import url("./blocks/card.less");
