Добавляет интерактивность иконкам избранное

--- a/source/less/blocks/card.less
+++ b/source/less/blocks/card.less
@@ -4,9 +4,9 @@
 
 .card__type {
   position: absolute;
-  top: 30px;
-  left: -32px;
-  width: 87px;
+  top: 10px;
+  left: -12px;
+  width: 47px;
   height: 25px;
   box-sizing: border-box;
   padding-top: 2px;
@@ -17,10 +17,11 @@
   text-transform: uppercase;
   text-align: center;
   color: #ffffff;
+  letter-spacing: 0.15em;
   background: linear-gradient(to right, #9710e9, #fd8d43);
 }
 
-.card__button-likes {
+.card__buttonlikes {
   position: absolute;
   width: 27px;
   height: 25px;
@@ -29,7 +30,8 @@
   right: 20px;
   content: "";
   background-color: #ffffff;
-  background-image: url("../../img/like.png");
+  background-image: url("../../img/like-off.svg");
+  background-repeat: no-repeat;
   cursor: pointer;
 
   &:hover {
