Добавляет секцию sale

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -11,3 +11,4 @@
 @import url("./blocks/categories.less");
 @import url("./blocks/popular.less");
 @import url("./blocks/card.less");
+@import url("./blocks/sale.less");
