Добавляет секцию with

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -12,3 +12,5 @@
 @import url("./blocks/popular.less");
 @import url("./blocks/card.less");
 @import url("./blocks/sale.less");
+@import url("./blocks/with.less");
+@import url("./blocks/with-card.less");
