Добавляет секцию with

--- a/source/less/blocks/with.less
+++ b/source/less/blocks/with.less
@@ -113,16 +113,16 @@
     box-shadow: 0 0 5px 5px rgba(196, 196, 196, 0.3);
   }
 
-  &:hover .card__name,
-  &:hover .card__price {
+  &:hover .with-card__name,
+  &:hover .with-card__price {
     color: #ff7931;
   }
 
-  &:hover .card__button-viewing {
+  &:hover .with-card__button-viewing {
     display: block;
   }
 
-  &:hover .card__button-viewing--none {
+  &:hover .with-card__button-viewing--none {
     display: none;
   }
 }
