Улучшает логику кнопок в слайдерах

--- a/source/less/blocks/card.less
+++ b/source/less/blocks/card.less
@@ -94,10 +94,6 @@
   font-weight: bold;
 }
 
-.not-display {
-  display: none;
-}
-
 .card__not-available {
   position: absolute;
   bottom: 40px;
@@ -127,6 +123,10 @@
 
   &:hover {
     opacity: 50%;
+  }
+
+  &:active {
+    opacity: 100%;
   }
 }
 
