--- a/source/less/blocks/with.less
+++ b/source/less/blocks/with.less
@@ -15,7 +15,7 @@
   list-style: none;
   margin: 0;
   padding: 0;
-  margin-bottom: 25px;
+  margin-bottom: 20px;
 }
 
 .with__item {
@@ -64,6 +64,9 @@
 
 .with__slider-prev-button {
   position: absolute;
+  top: 50%;
+  transform: translate(0, -50%);
+  left: -45px;
   width: 40px;
   height: 36px;
   border-radius: 50%;
@@ -72,9 +75,6 @@
   background-image: url("../../img/arrow-left-gray.svg");
   background-repeat: no-repeat;
   background-position: center;
-  top: 50%;
-  transform: translate(0, -50%);
-  left: -50px;
   box-shadow: 0 0 5px 5px rgba(196, 196, 196, 0.2);
   cursor: pointer;
 
@@ -88,16 +88,16 @@
 }
 
 .with__slider-wrapper {
-  width: 1170px;
+  width: 1180px;
   overflow: hidden;
 }
 
 .with__list2 {
   display: flex;
-  gap: 30px;
+  gap: 20px;
   margin: 0;
   padding: 0;
-  margin-bottom: 35px;
+  margin-bottom: 30px;
   list-style: none;
   transition: transform 0.5s ease-in-out;
 }
@@ -105,9 +105,10 @@
 .with__card {
   flex-shrink: 0;
   width: 270px;
-  height: 375px;
+  height: 403px;
   box-sizing: border-box;
   border: 1px solid #cdcdcd;
+  margin: 5px;
 
   &:hover {
     box-shadow: 0 0 5px 5px rgba(196, 196, 196, 0.3);
