--- a/source/less/style.less
+++ b/source/less/style.less
@@ -14,3 +14,5 @@
 @import url("./blocks/sale.less");
 @import url("./blocks/with.less");
 @import url("./blocks/with-card.less");
+@import url("./blocks/footer.less");
+@import url("./blocks/info.less");
