Добавляет фокус в навигации

--- a/source/less/blocks/sale.less
+++ b/source/less/blocks/sale.less
@@ -3,6 +3,7 @@
 }
 
 .sale__button {
+  padding: 0;
   border: none;
   background: none;
   cursor: pointer;
@@ -14,4 +15,8 @@
   &:active {
     opacity: 100%;
   }
+}
+
+.sale__img {
+  display: block;
 }
