--- a/source/less/blocks/nav.less
+++ b/source/less/blocks/nav.less
@@ -67,6 +67,8 @@
 }
 
 .nav-user__item {
+  width: 40px;
+  height: 26px;
   cursor: pointer;
 
   &:hover {
@@ -78,42 +80,40 @@
   }
 }
 
-.nav-user__item:nth-child(1) {
+.nav-user__item:nth-child(1) .nav-user__link {
   position: relative;
-  width: 27px;
-  height: 24px;
-  padding-right: 25px;
+  display: block;
+  height: 26px;
+  padding-right: 40px;
   background-image: url("../../img/like.png");
   background-repeat: no-repeat;
-  background-position: center;
 }
 
 .nav-user__likes {
   position: absolute;
   top: 5px;
-  left: 27px;
+  left: 14px;
   width: 23px;
   height: 23px;
   border-radius: 50%;
   background-color: #ff7931;
   font-size: 12px;
-  cursor: pointer;
 }
 
-.nav-user__item:nth-child(2) {
-  width: 27px;
-  height: 24px;
-  padding-right: 10px;
+.nav-user__item:nth-child(2) .nav-user__link {
+  display: block;
+  height: 26px;
+  padding-right: 40px;
   background-image: url("../../img/login.png");
   background-repeat: no-repeat;
   background-position: center;
 }
 
-.nav-user__item:nth-child(3) {
+.nav-user__item:nth-child(3) .nav-user__link {
   position: relative;
-  width: 40px;
-  height: 32px;
-  padding-right: 10px;
+  display: block;
+  height: 26px;
+  padding-right: 40px;
   background-image: url("../../img/bascket.png");
   background-repeat: no-repeat;
   background-position: center;
@@ -121,14 +121,13 @@
 
 .nav-user__goods {
   position: absolute;
-  top: 10px;
-  left: 27px;
+  top: 7px;
+  left: 20px;
   width: 23px;
   height: 23px;
   border-radius: 50%;
   background-color: #ff7931;
   font-size: 12px;
-  cursor: pointer;
 }
 
 .list-goods {
