Добавляет спрайты и 2х изображения

--- a/source/less/blocks/action.less
+++ b/source/less/blocks/action.less
@@ -109,7 +109,7 @@
   width: 269px;
   height: 98px;
   background-color: #f0f0f4;
-  background-image: url("../../img/timer.svg");
+  background-image: url("../../img/icons/timer.svg");
   background-repeat: no-repeat;
   background-position: 35px 50px;
 }
