--- a/source/less/blocks/categories.less
+++ b/source/less/blocks/categories.less
@@ -31,27 +31,27 @@
 }
 
 .categories-card--chemistry::before {
-  background-image: url("../../img/icon1.svg");
+  background-image: url("../../img/icons/icon1.svg");
 }
 
 .categories-card--tyres::before {
-  background-image: url("../../img/icon2.svg");
+  background-image: url("../../img/icons/icon2.svg");
 }
 
 .categories-card--tools::before {
-  background-image: url("../../img/icon3.svg");
+  background-image: url("../../img/icons/icon3.svg");
 }
 
 .categories-card--parts::before {
-  background-image: url("../../img/icon4.svg");
+  background-image: url("../../img/icons/icon4.svg");
 }
 
 .categories-card--electronics::before {
-  background-image: url("../../img/icon5.svg");
+  background-image: url("../../img/icons/icon5.svg");
 }
 
 .categories-card--other::before {
-  background-image: url("../../img/icon6.svg");
+  background-image: url("../../img/icons/icon6.svg");
 }
 
 .categories-card__title {
