--- a/source/less/blocks/nav.less
+++ b/source/less/blocks/nav.less
@@ -48,7 +48,7 @@
 
 .nav-list__item:nth-child(4) {
   padding: 25px 0 0 73px;
-  background-image: url("../../img/arrow.svg");
+  background-image: url("../../img/icons/arrow.svg");
   background-repeat: no-repeat;
   background-position: 35px 25px;
   text-align: start;
@@ -85,7 +85,7 @@
   display: block;
   height: 26px;
   padding-right: 40px;
-  background-image: url("../../img/like.png");
+  background-image: url("../../img/icons/like.svg");
   background-repeat: no-repeat;
 }
 
@@ -104,7 +104,7 @@
   display: block;
   height: 26px;
   padding-right: 40px;
-  background-image: url("../../img/login.png");
+  background-image: url("../../img/icons/login.svg");
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -114,7 +114,7 @@
   display: block;
   height: 26px;
   padding-right: 40px;
-  background-image: url("../../img/bascket.png");
+  background-image: url("../../img/icons/bascket.svg");
   background-repeat: no-repeat;
   background-position: center;
 }
