--- a/source/less/blocks/popular.less
+++ b/source/less/blocks/popular.less
@@ -69,7 +69,7 @@
   border-radius: 50%;
   border: none;
   background-color: #ffffff;
-  background-image: url("../../img/arrow-left-gray.svg");
+  background-image: url("../../img/icons/arrow-left-gray.svg");
   background-repeat: no-repeat;
   background-position: center;
   top: 50%;
@@ -135,7 +135,7 @@
   border-radius: 50%;
   border: none;
   background-color: #ffffff;
-  background-image: url("../../img/arrow-right-gray.svg");
+  background-image: url("../../img/icons/arrow-right-gray.svg");
   background-repeat: no-repeat;
   background-position: center;
   top: 50%;
