--- a/source/less/blocks/slider.less
+++ b/source/less/blocks/slider.less
@@ -44,7 +44,7 @@
   width: 36px;
   height: 36px;
   content: "";
-  background-image: url("../img/arrow-left.svg");
+  background-image: url("../../img/icons/arrow-left.svg");
   background-repeat: no-repeat;
   background-position: center;
   z-index: 1;
@@ -78,7 +78,7 @@
   width: 36px;
   height: 36px;
   content: "";
-  background-image: url("../img/arrow-right.svg");
+  background-image: url("../../img/icons/arrow-right.svg");
   background-repeat: no-repeat;
   background-position: center;
 }
