--- a/source/less/blocks/with-card.less
+++ b/source/less/blocks/with-card.less
@@ -30,7 +30,7 @@
   right: 20px;
   content: "";
   background-color: #ffffff;
-  background-image: url("../../img/like-off.svg");
+  background-image: url("../../img/icons/like-off.svg");
   background-repeat: no-repeat;
   cursor: pointer;
 
@@ -171,7 +171,7 @@
   background-color: #ffffff;
   border: none;
   content: "";
-  background-image: url("../../img/bascket2.svg");
+  background-image: url("../../img/icons/bascket2.svg");
   cursor: pointer;
 
   &:hover {
