--- a/source/less/blocks/with.less
+++ b/source/less/blocks/with.less
@@ -72,7 +72,7 @@
   border-radius: 50%;
   border: none;
   background-color: #ffffff;
-  background-image: url("../../img/arrow-left-gray.svg");
+  background-image: url("../../img/icons/arrow-left-gray.svg");
   background-repeat: no-repeat;
   background-position: center;
   box-shadow: 0 0 5px 5px rgba(196, 196, 196, 0.2);
@@ -135,7 +135,7 @@
   border-radius: 50%;
   border: none;
   background-color: #ffffff;
-  background-image: url("../../img/arrow-right-gray.svg");
+  background-image: url("../../img/icons/arrow-right-gray.svg");
   background-repeat: no-repeat;
   background-position: center;
   top: 50%;
