Добавляет секцию хлебных крошек

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -16,3 +16,4 @@
 @import url("./blocks/with-card.less");
 @import url("./blocks/footer.less");
 @import url("./blocks/info.less");
+@import url("./blocks/breadcrumbs.less");
